Search API 1.x, dev (xx/xx/xxxx):
---------------------------------
- #2110315 by drumm, drunken monkey: Added specialized Views filters for users
  and terms.
- #2111273 by drunken monkey: Fixed Javascript states for exposed filter
  operator.
- #2102353 by aaronbauman: Fixed "smaller than" to read "less than".
- #2097559 by thijsvdanker: Fixed the language of created search excerpts.
- #2096275 by andrewbelcher: Fixed calling of Views pager pre/post execute
  callbacks.
- #2093023 by maciej.zgadzaj: Added Drush commands to enable and disable
  indexes.
- #2088905 by queenvictoria, drunken monkey: Fixed handling of Views
  override_path option.
- #2083481 by drunken monkey, nickgs: Added "exclude" option for facets.
- #2084953 by Yaron Tal: Fixed issue with theme initialization.
- #2075839 by leeomara, drunken monkey: Added descriptions to field lists for
  'Aggregated Fields'.

Search API 1.8 (09/01/2013):
----------------------------
- #1414048 by drunken monkey: Fixed exception in views.inc removes all Search
  API tables.
- #1921690 by drunken monkey: Fixed stale Views cache when indexed fields
  change.
- #2077035 by maciej.zgadzaj: Fixed whitespace recognition for search keys.
- #2071229 by drunken monkey: Fixed use of core search constant.
- #2069023 by drunken monkey: Fixed reaction to disabled modules.
- #2057867 by drunken monkey: Fixed multiple values for taxonomy contextual
  filter.
- #2052701 by drunken monkey, erdos: Fixed cron queue state when disabling the
  module.
- #1878606 by drunken monkey: Fixed labels for boolean facets.
- #2053171 by drunken monkey: Improved tests.
- #1433720 by davidwbarratt, drunken monkey, JvE: Fixed handling of empty
  selection for checkboxes.
- #1414078 by drunken monkey, jaxxed: Fixed revert of exportables.
- #2011396 by drunken monkey: Fixed support for several facets on a single
  field.
- #2050117 by izus, drunken monkey: Updated README.txt to reflect removed
  sub-modules.